--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="195dp"
         android:layoutDirection="rtl"
-
         >
 
         <TextView
@@ -20,6 +19,7 @@
             android:layout_height="match_parent"
             android:textAlignment="textEnd"
             android:textColor="@color/black"
+            android:layoutDirection="ltr"
             android:textSize="80dp" />
     </HorizontalScrollView>
 
