--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="195dp"
-        android:layoutDirection="rtl"
-        >
+        android:layoutDirection="rtl">
 
         <TextView
             android:id="@+id/users_view"
@@ -20,7 +19,7 @@
             android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:layoutDirection="ltr"
-            android:textSize="80dp" />
+            android:textSize="80sp" />
     </HorizontalScrollView>
 
     <TableLayout
@@ -37,7 +36,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="C"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/open_parenthesis__button"
@@ -47,7 +46,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="("
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/close_parenthesis_button"
@@ -57,7 +56,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text=")"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/division_button"
@@ -67,7 +66,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="/"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
         </TableRow>
 
         <TableRow android:layout_margin="3dp">
@@ -80,7 +79,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="7"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/eight_button"
@@ -90,7 +89,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="8"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/nine_button"
@@ -100,7 +99,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="9"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/multiplication_button"
@@ -110,7 +109,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="*"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
         </TableRow>
 
         <TableRow android:layout_margin="3dp">
@@ -123,7 +122,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="4"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/fife_button"
@@ -133,7 +132,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="5"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/six_button"
@@ -143,7 +142,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="6"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/subtraction_button"
@@ -153,7 +152,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="-"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
         </TableRow>
 
         <TableRow android:layout_margin="3dp">
@@ -166,7 +165,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="1"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/two_button"
@@ -176,7 +175,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="2"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/three_button"
@@ -186,7 +185,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="3"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/addition_button"
@@ -196,20 +195,11 @@
                 android:background="?android:selectableItemBackground"
                 android:text="+"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
         </TableRow>
 
         <TableRow android:layout_margin="3dp">
 
-            <Button
-                android:id="@+id/to_negative_button"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:height="100dp"
-                android:background="?android:selectableItemBackground"
-                android:text="+/-"
-                android:textColor="@color/black"
-                android:textSize="40dp" />
 
             <Button
                 android:id="@+id/zero_button"
@@ -218,7 +208,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="0"
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/point_button"
@@ -226,8 +216,9 @@
                 android:height="100dp"
                 android:background="?android:selectableItemBackground"
                 android:text=","
+
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
 
             <Button
                 android:id="@+id/result_button"
@@ -237,7 +228,7 @@
                 android:background="?android:selectableItemBackground"
                 android:text="="
                 android:textColor="@color/black"
-                android:textSize="40dp" />
+                android:textSize="40sp" />
         </TableRow>
 
 
