--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layoutDirection="rtl">
 
         <TextView
-            android:id="@+id/users_view"
+            android:id="@+id/users_text_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layoutDirection="ltr"
