--- a/app/src/main/res/values-land/dimen.xml
+++ b/app/src/main/res/values-land/dimen.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="Settings_button_height">35dp</dimen>
+    <dimen name="Settings_button_width">60dp</dimen>
+</resources>
