--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="CustomTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="CustomTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimaryVariant">@color/grey</item>
         <item name="android:navigationBarColor">@color/cherry</item>
