--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="CustomTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="CustomTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimaryVariant">@color/grey</item>
         <item name="android:navigationBarColor">@color/blue</item>
